ingress_allApps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/pingpong"
        backend:
          service:
            name: pingpong-svc
            port: 
              number: 5563
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: logoutput-svc
            port: 
              number: 4563
      - pathType: Prefix
        path: /images
        backend:
          service:
            name: images-svc
            port: 
              number: 2345
